--- a/Controllers/response.html
+++ b/Controllers/response.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Food Ordering Application</title>
+    <title>Payment success</title>
     <script>
         function myFunction() {
             window.location = "https://zomato-clone-ajk.web.app/";
