--- a/Express_code/Controllers/failure.html
+++ b/Express_code/Controllers/failure.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Food Ordering Application</title>
+    <title>Payment Failed</title>
     <script>
         function myFunction() {
-            window.location = "http://localhost:3000/";
+            window.location = "https://zomato-clone-ajk.web.app/";
         };
     </script>
     <style>
